# partage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml
.cargo/: config.toml
.github/workfows/: docker-publish.yml
client/: .eslintrc-auto-import.json  bun.lockb  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: auto-imports.d.ts  components.d.ts  typed-router.d.ts
client/src/bindings/: README.md  Room.ts  SocketMessage.ts  SocketMessageType.ts
client/src/components/: AppFooter.vue  ChatChannel.vue
client/src/composables/: useRooms.ts  useUser.ts
client/src/layouts/: default.vue
client/src/pages/c/: [id].vue  index.vue
client/src/plugins/: index.ts  vuetify.ts
client/src/router/: index.ts
client/src/utils/: theme.ts  user.ts
migrations/: 20241112184311_rooms.sql
src/: main.rs
