[package]
name = "partage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
headers = "0.4"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rust-embed = "8.5.0"
mime_guess = "2.0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
