[package]
name = "partage"
description = "A simple file sharing service"
license = "MIT"
repository = "https://github.com/kernoeb/partage/"
keywords = ["file", "sharing", "service"]
categories = ["networking", "web-programming"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
headers = "0.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
rust-embed = { version = "8.5.0", features = ["compression"] }
mime_guess = "2.0.5"
optional-default = "0.1.0"
ts-rs = { version = "10.0.0", features = ["no-serde-warnings"] }
anyhow = "1.0.93"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15.7"

[dev-dependencies]
tokio-tungstenite = "0"
reqwest = { version = "0", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3
